[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game_Menu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Game_Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 900.0
margin_bottom = 550.0

[node name="InfoPageButton" type="TextureButton" parent="Panel"]
margin_left = 639.043
margin_top = 421.555
margin_right = 703.043
margin_bottom = 485.555
texture_normal = ExtResource( 2 )

[node name="AttributePageButton" type="TextureButton" parent="Panel"]
margin_left = 707.043
margin_top = 421.555
margin_right = 771.043
margin_bottom = 485.555
texture_normal = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_left = 450.0
margin_top = 10.0
margin_right = 530.0
margin_bottom = 210.0
rect_scale = Vector2( 3.91754, 1.94757 )
text = "Buy Upgrades"

[node name="InfoPage" type="Control" parent="Panel"]
margin_right = 400.0
margin_bottom = 500.0

[node name="AttributePage" type="Control" parent="Panel"]
margin_right = 400.0
margin_bottom = 500.0
[connection signal="pressed" from="Panel/InfoPageButton" to="." method="_on_InfoPage_pressed"]
[connection signal="pressed" from="Panel/AttributePageButton" to="." method="_on_AttributePage_pressed"]
